--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main {
+            res.srcDirs =
+                    [
+                            'src/main/res/layout/ActivityLayout',
+                            'src/main/res/layout/CardViews',
+                            'src/main/res/layout/FragmentLayout',
+                            'src/main/res/layout',
+                            'src/main/res'
+                    ]
+        }
+    }
 }
 
 dependencies {
@@ -31,8 +43,8 @@ dependencies {
     implementation 'com.github.DanielMartinus:Stepper-Touch:0.6'
     implementation 'devlight.io:arcprogressstackview:1.0.4'
 
-    implementation 'com.google.firebase:firebase-core:12.0.1'
-    implementation 'com.google.firebase:firebase-auth:12.0.1'
+    implementation 'com.google.firebase:firebase-core:16.0.0'
+    implementation 'com.google.firebase:firebase-auth:16.0.1'
 
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
